parser.output
Terminals unused in grammar

   T_FUNCTION
   T_LBRACKET
   T_RBRACKET
   T_EOF


Grammar

    0 $accept: program $end

    1 $@1: /* empty */

    2 program: T_START T_MAIN $@1 block_statement T_END

    3 statements: /* empty */
    4           | statement statements

    5 statement: declaration_statement
    6          | assignment_statement
    7          | expression_statement
    8          | if_statement
    9          | while_statement
   10          | for_statement
   11          | block_statement
   12          | T_BREAK T_SEMICOLON
   13          | T_CONTINUE T_SEMICOLON
   14          | T_RETURN expression T_SEMICOLON
   15          | T_SEMICOLON

   16 argument_list: expression
   17              | argument_list T_COMMA expression

   18 opt_argument_list: /* empty */
   19                  | argument_list

   20 $@2: /* empty */

   21 block_statement: T_LBRACE $@2 statements T_RBRACE

   22 declaration_statement: type_specifier T_IDENTIFIER T_SEMICOLON
   23                      | type_specifier T_IDENTIFIER T_ASSIGN expression T_SEMICOLON

   24 type_specifier: T_INT
   25               | T_FLOAT
   26               | T_BOOL
   27               | T_CHAR
   28               | T_STRING
   29               | T_VOID
   30               | T_GRAPH
   31               | T_TREE
   32               | T_RANGE_TREE
   33               | T_DSU
   34               | T_MATRIX
   35               | T_ORDERED_SET

   36 assignment_statement: T_IDENTIFIER T_ASSIGN expression T_SEMICOLON
   37                     | T_IDENTIFIER T_PLUS_ASSIGN expression T_SEMICOLON
   38                     | T_IDENTIFIER T_MINUS_ASSIGN expression T_SEMICOLON
   39                     | T_IDENTIFIER T_STAR_ASSIGN expression T_SEMICOLON
   40                     | T_IDENTIFIER T_SLASH_ASSIGN expression T_SEMICOLON
   41                     | T_IDENTIFIER T_PERCENT_ASSIGN expression T_SEMICOLON

   42 expression_statement: expression T_SEMICOLON

   43 if_statement: T_IF T_LPAREN expression T_RPAREN statement
   44             | T_IF T_LPAREN expression T_RPAREN statement T_ELSE statement

   45 while_statement: T_WHILE T_LPAREN expression T_RPAREN statement

   46 for_statement: T_FOR T_LPAREN declaration_statement expression T_SEMICOLON expression T_RPAREN statement
   47              | T_FOR T_LPAREN assignment_statement expression T_SEMICOLON expression T_RPAREN statement

   48 expression: T_INT_LITERAL
   49           | T_FLOAT_LITERAL
   50           | T_STRING_LITERAL
   51           | T_BOOL_LITERAL
   52           | T_CHAR_LITERAL
   53           | T_IDENTIFIER T_LPAREN opt_argument_list T_RPAREN
   54           | T_IDENTIFIER
   55           | expression T_PLUS expression
   56           | expression T_MINUS expression
   57           | expression T_MULTIPLY expression
   58           | expression T_DIVIDE expression
   59           | expression T_MODULO expression
   60           | expression T_EQ expression
   61           | expression T_NEQ expression
   62           | expression T_LT expression
   63           | expression T_GT expression
   64           | expression T_LTE expression
   65           | expression T_GTE expression
   66           | expression T_AND expression
   67           | expression T_OR expression
   68           | T_NOT expression
   69           | T_MINUS expression
   70           | T_LPAREN expression T_RPAREN
   71           | T_MAHI_WRITE T_LPAREN expression T_RPAREN
   72           | T_MAHI_READ T_LPAREN T_IDENTIFIER T_RPAREN
   73           | T_MAHI_SORT T_LPAREN expression T_RPAREN
   74           | T_MAHI_PUSH T_LPAREN expression T_COMMA expression T_RPAREN


Terminals, with rules where they appear

$end (0) 0
error (256)
T_INT (258) 24
T_FLOAT (259) 25
T_BOOL (260) 26
T_CHAR (261) 27
T_STRING (262) 28
T_VOID (263) 29
T_GRAPH (264) 30
T_TREE (265) 31
T_RANGE_TREE (266) 32
T_DSU (267) 33
T_MATRIX (268) 34
T_ORDERED_SET (269) 35
T_IF (270) 43 44
T_ELSE (271) 44
T_FOR (272) 46 47
T_WHILE (273) 45
T_RETURN (274) 14
T_BREAK (275) 12
T_CONTINUE (276) 13
T_FUNCTION (277)
T_MAIN (278) 2
T_START (279) 2
T_END (280) 2
T_IDENTIFIER (281) 22 23 36 37 38 39 40 41 53 54 72
T_INT_LITERAL (282) 48
T_FLOAT_LITERAL (283) 49
T_STRING_LITERAL (284) 50
T_BOOL_LITERAL (285) 51
T_CHAR_LITERAL (286) 52
T_ASSIGN (287) 23 36
T_PLUS (288) 55
T_MINUS (289) 56 69
T_MULTIPLY (290) 57
T_DIVIDE (291) 58
T_MODULO (292) 59
T_PLUS_ASSIGN (293) 37
T_MINUS_ASSIGN (294) 38
T_STAR_ASSIGN (295) 39
T_SLASH_ASSIGN (296) 40
T_PERCENT_ASSIGN (297) 41
T_EQ (298) 60
T_NEQ (299) 61
T_LT (300) 62
T_GT (301) 63
T_LTE (302) 64
T_GTE (303) 65
T_AND (304) 66
T_OR (305) 67
T_NOT (306) 68
T_LPAREN (307) 43 44 45 46 47 53 70 71 72 73 74
T_RPAREN (308) 43 44 45 46 47 53 70 71 72 73 74
T_LBRACE (309) 21
T_RBRACE (310) 21
T_LBRACKET (311)
T_RBRACKET (312)
T_COMMA (313) 17 74
T_SEMICOLON (314) 12 13 14 15 22 23 36 37 38 39 40 41 42 46 47
T_MAHI_READ (315) 72
T_MAHI_WRITE (316) 71
T_MAHI_SORT (317) 73
T_MAHI_PUSH (318) 74
T_EOF (319)
UMINUS (320)
LOWER_THAN_ELSE (321)


Nonterminals, with rules where they appear

$accept (67)
    on left: 0
program (68)
    on left: 2, on right: 0
$@1 (69)
    on left: 1, on right: 2
statements (70)
    on left: 3 4, on right: 4 21
statement (71)
    on left: 5 6 7 8 9 10 11 12 13 14 15, on right: 4 43 44 45 46 47
argument_list (72)
    on left: 16 17, on right: 17 19
opt_argument_list (73)
    on left: 18 19, on right: 53
block_statement (74)
    on left: 21, on right: 2 11
$@2 (75)
    on left: 20, on right: 21
declaration_statement (76)
    on left: 22 23, on right: 5 46
type_specifier (77)
    on left: 24 25 26 27 28 29 30 31 32 33 34 35, on right: 22 23
assignment_statement (78)
    on left: 36 37 38 39 40 41, on right: 6 47
expression_statement (79)
    on left: 42, on right: 7
if_statement (80)
    on left: 43 44, on right: 8
while_statement (81)
    on left: 45, on right: 9
for_statement (82)
    on left: 46 47, on right: 10
expression (83)
    on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
    66 67 68 69 70 71 72 73 74, on right: 14 16 17 23 36 37 38 39 40
    41 42 43 44 45 46 47 55 56 57 58 59 60 61 62 63 64 65 66 67 68
    69 70 71 73 74


state 0

    0 $accept: . program $end

    T_START  shift, and go to state 1

    program  go to state 2


state 1

    2 program: T_START . T_MAIN $@1 block_statement T_END

    T_MAIN  shift, and go to state 3


state 2

    0 $accept: program . $end

    $end  shift, and go to state 4


state 3

    2 program: T_START T_MAIN . $@1 block_statement T_END

    $default  reduce using rule 1 ($@1)

    $@1  go to state 5


state 4

    0 $accept: program $end .

    $default  accept


state 5

    2 program: T_START T_MAIN $@1 . block_statement T_END

    T_LBRACE  shift, and go to state 6

    block_statement  go to state 7


state 6

   21 block_statement: T_LBRACE . $@2 statements T_RBRACE

    $default  reduce using rule 20 ($@2)

    $@2  go to state 8


state 7

    2 program: T_START T_MAIN $@1 block_statement . T_END

    T_END  shift, and go to state 9


state 8

   21 block_statement: T_LBRACE $@2 . statements T_RBRACE

    T_INT             shift, and go to state 10
    T_FLOAT           shift, and go to state 11
    T_BOOL            shift, and go to state 12
    T_CHAR            shift, and go to state 13
    T_STRING          shift, and go to state 14
    T_VOID            shift, and go to state 15
    T_GRAPH           shift, and go to state 16
    T_TREE            shift, and go to state 17
    T_RANGE_TREE      shift, and go to state 18
    T_DSU             shift, and go to state 19
    T_MATRIX          shift, and go to state 20
    T_ORDERED_SET     shift, and go to state 21
    T_IF              shift, and go to state 22
    T_FOR             shift, and go to state 23
    T_WHILE           shift, and go to state 24
    T_RETURN          shift, and go to state 25
    T_BREAK           shift, and go to state 26
    T_CONTINUE        shift, and go to state 27
    T_IDENTIFIER      shift, and go to state 28
    T_INT_LITERAL     shift, and go to state 29
    T_FLOAT_LITERAL   shift, and go to state 30
    T_STRING_LITERAL  shift, and go to state 31
    T_BOOL_LITERAL    shift, and go to state 32
    T_CHAR_LITERAL    shift, and go to state 33
    T_MINUS           shift, and go to state 34
    T_NOT             shift, and go to state 35
    T_LPAREN          shift, and go to state 36
    T_LBRACE          shift, and go to state 6
    T_SEMICOLON       shift, and go to state 37
    T_MAHI_READ       shift, and go to state 38
    T_MAHI_WRITE      shift, and go to state 39
    T_MAHI_SORT       shift, and go to state 40
    T_MAHI_PUSH       shift, and go to state 41

    $default  reduce using rule 3 (statements)

    statements             go to state 42
    statement              go to state 43
    block_statement        go to state 44
    declaration_statement  go to state 45
    type_specifier         go to state 46
    assignment_statement   go to state 47
    expression_statement   go to state 48
    if_statement           go to state 49
    while_statement        go to state 50
    for_statement          go to state 51
    expression             go to state 52


state 9

    2 program: T_START T_MAIN $@1 block_statement T_END .

    $default  reduce using rule 2 (program)


state 10

   24 type_specifier: T_INT .

    $default  reduce using rule 24 (type_specifier)


state 11

   25 type_specifier: T_FLOAT .

    $default  reduce using rule 25 (type_specifier)


state 12

   26 type_specifier: T_BOOL .

    $default  reduce using rule 26 (type_specifier)


state 13

   27 type_specifier: T_CHAR .

    $default  reduce using rule 27 (type_specifier)


state 14

   28 type_specifier: T_STRING .

    $default  reduce using rule 28 (type_specifier)


state 15

   29 type_specifier: T_VOID .

    $default  reduce using rule 29 (type_specifier)


state 16

   30 type_specifier: T_GRAPH .

    $default  reduce using rule 30 (type_specifier)


state 17

   31 type_specifier: T_TREE .

    $default  reduce using rule 31 (type_specifier)


state 18

   32 type_specifier: T_RANGE_TREE .

    $default  reduce using rule 32 (type_specifier)


state 19

   33 type_specifier: T_DSU .

    $default  reduce using rule 33 (type_specifier)


state 20

   34 type_specifier: T_MATRIX .

    $default  reduce using rule 34 (type_specifier)


state 21

   35 type_specifier: T_ORDERED_SET .

    $default  reduce using rule 35 (type_specifier)


state 22

   43 if_statement: T_IF . T_LPAREN expression T_RPAREN statement
   44             | T_IF . T_LPAREN expression T_RPAREN statement T_ELSE statement

    T_LPAREN  shift, and go to state 53


state 23

   46 for_statement: T_FOR . T_LPAREN declaration_statement expression T_SEMICOLON expression T_RPAREN statement
   47              | T_FOR . T_LPAREN assignment_statement expression T_SEMICOLON expression T_RPAREN statement

    T_LPAREN  shift, and go to state 54


state 24

   45 while_statement: T_WHILE . T_LPAREN expression T_RPAREN statement

    T_LPAREN  shift, and go to state 55


state 25

   14 statement: T_RETURN . expression T_SEMICOLON

    T_IDENTIFIER      shift, and go to state 56
    T_INT_LITERAL     shift, and go to state 29
    T_FLOAT_LITERAL   shift, and go to state 30
    T_STRING_LITERAL  shift, and go to state 31
    T_BOOL_LITERAL    shift, and go to state 32
    T_CHAR_LITERAL    shift, and go to state 33
    T_MINUS           shift, and go to state 34
    T_NOT             shift, and go to state 35
    T_LPAREN          shift, and go to state 36
    T_MAHI_READ       shift, and go to state 38
    T_MAHI_WRITE      shift, and go to state 39
    T_MAHI_SORT       shift, and go to state 40
    T_MAHI_PUSH       shift, and go to state 41

    expression  go to state 57


state 26

   12 statement: T_BREAK . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 58


state 27

   13 statement: T_CONTINUE . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 59


state 28

   36 assignment_statement: T_IDENTIFIER . T_ASSIGN expression T_SEMICOLON
   37                     | T_IDENTIFIER . T_PLUS_ASSIGN expression T_SEMICOLON
   38                     | T_IDENTIFIER . T_MINUS_ASSIGN expression T_SEMICOLON
   39                     | T_IDENTIFIER . T_STAR_ASSIGN expression T_SEMICOLON
   40                     | T_IDENTIFIER . T_SLASH_ASSIGN expression T_SEMICOLON
   41                     | T_IDENTIFIER . T_PERCENT_ASSIGN expression T_SEMICOLON
   53 expression: T_IDENTIFIER . T_LPAREN opt_argument_list T_RPAREN
   54           | T_IDENTIFIER .

    T_ASSIGN          shift, and go to state 60
    T_PLUS_ASSIGN     shift, and go to state 61
    T_MINUS_ASSIGN    shift, and go to state 62
    T_STAR_ASSIGN     shift, and go to state 63
    T_SLASH_ASSIGN    shift, and go to state 64
    T_PERCENT_ASSIGN  shift, and go to state 65
    T_LPAREN          shift, and go to state 66

    $default  reduce using rule 54 (expression)


state 29

   48 expression: T_INT_LITERAL .

    $default  reduce using rule 48 (expression)


state 30

   49 expression: T_FLOAT_LITERAL .

    $default  reduce using rule 49 (expression)


state 31

   50 expression: T_STRING_LITERAL .

    $default  reduce using rule 50 (expression)


state 32

   51 expression: T_BOOL_LITERAL .

    $default  reduce using rule 51 (expression)


state 33

   52 expression: T_CHAR_LITERAL .

    $default  reduce using rule 52 (expression)


state 34

   69 expression: T_MINUS . expression

    T_IDENTIFIER      shift, and go to state 56
    T_INT_LITERAL     shift, and go to state 29
    T_FLOAT_LITERAL   shift, and go to state 30
    T_STRING_LITERAL  shift, and go to state 31
    T_BOOL_LITERAL    shift, and go to state 32
    T_CHAR_LITERAL    shift, and go to state 33
    T_MINUS           shift, and go to state 34
    T_NOT             shift, and go to state 35
    T_LPAREN          shift, and go to state 36
    T_MAHI_READ       shift, and go to state 38
    T_MAHI_WRITE      shift, and go to state 39
    T_MAHI_SORT       shift, and go to state 40
    T_MAHI_PUSH       shift, and go to state 41

    expression  go to state 67


state 35

   68 expression: T_NOT . expression

    T_IDENTIFIER      shift, and go to state 56
    T_INT_LITERAL     shift, and go to state 29
    T_FLOAT_LITERAL   shift, and go to state 30
    T_STRING_LITERAL  shift, and go to state 31
    T_BOOL_LITERAL    shift, and go to state 32
    T_CHAR_LITERAL    shift, and go to state 33
    T_MINUS           shift, and go to state 34
    T_NOT             shift, and go to state 35
    T_LPAREN          shift, and go to state 36
    T_MAHI_READ       shift, and go to state 38
    T_MAHI_WRITE      shift, and go to state 39
    T_MAHI_SORT       shift, and go to state 40
    T_MAHI_PUSH       shift, and go to state 41

    expression  go to state 68


state 36

   70 expression: T_LPAREN . expression T_RPAREN

    T_IDENTIFIER      shift, and go to state 56
    T_INT_LITERAL     shift, and go to state 29
    T_FLOAT_LITERAL   shift, and go to state 30
    T_STRING_LITERAL  shift, and go to state 31
    T_BOOL_LITERAL    shift, and go to state 32
    T_CHAR_LITERAL    shift, and go to state 33
    T_MINUS           shift, and go to state 34
    T_NOT             shift, and go to state 35
    T_LPAREN          shift, and go to state 36
    T_MAHI_READ       shift, and go to state 38
    T_MAHI_WRITE      shift, and go to state 39
    T_MAHI_SORT       shift, and go to state 40
    T_MAHI_PUSH       shift, and go to state 41

    expression  go to state 69


state 37

   15 statement: T_SEMICOLON .

    $default  reduce using rule 15 (statement)


state 38

   72 expression: T_MAHI_READ . T_LPAREN T_IDENTIFIER T_RPAREN

    T_LPAREN  shift, and go to state 70


state 39

   71 expression: T_MAHI_WRITE . T_LPAREN expression T_RPAREN

    T_LPAREN  shift, and go to state 71


state 40

   73 expression: T_MAHI_SORT . T_LPAREN expression T_RPAREN

    T_LPAREN  shift, and go to state 72


state 41

   74 expression: T_MAHI_PUSH . T_LPAREN expression T_COMMA expression T_RPAREN

    T_LPAREN  shift, and go to state 73


state 42

   21 block_statement: T_LBRACE $@2 statements . T_RBRACE

    T_RBRACE  shift, and go to state 74


state 43

    4 statements: statement . statements

    T_INT             shift, and go to state 10
    T_FLOAT           shift, and go to state 11
    T_BOOL            shift, and go to state 12
    T_CHAR            shift, and go to state 13
    T_STRING          shift, and go to state 14
    T_VOID            shift, and go to state 15
    T_GRAPH           shift, and go to state 16
    T_TREE            shift, and go to state 17
    T_RANGE_TREE      shift, and go to state 18
    T_DSU             shift, and go to state 19
    T_MATRIX          shift, and go to state 20
    T_ORDERED_SET     shift, and go to state 21
    T_IF              shift, and go to state 22
    T_FOR             shift, and go to state 23
    T_WHILE           shift, and go to state 24
    T_RETURN          shift, and go to state 25
    T_BREAK           shift, and go to state 26
    T_CONTINUE        shift, and go to state 27
    T_IDENTIFIER      shift, and go to state 28
    T_INT_LITERAL     shift, and go to state 29
    T_FLOAT_LITERAL   shift, and go to state 30
    T_STRING_LITERAL  shift, and go to state 31
    T_BOOL_LITERAL    shift, and go to state 32
    T_CHAR_LITERAL    shift, and go to state 33
    T_MINUS           shift, and go to state 34
    T_NOT             shift, and go to state 35
    T_LPAREN          shift, and go to state 36
    T_LBRACE          shift, and go to state 6
    T_SEMICOLON       shift, and go to state 37
    T_MAHI_READ       shift, and go to state 38
    T_MAHI_WRITE      shift, and go to state 39
    T_MAHI_SORT       shift, and go to state 40
    T_MAHI_PUSH       shift, and go to state 41

    $default  reduce using rule 3 (statements)

    statements             go to state 75
    statement              go to state 43
    block_statement        go to state 44
    declaration_statement  go to state 45
    type_specifier         go to state 46
    assignment_statement   go to state 47
    expression_statement   go to state 48
    if_statement           go to state 49
    while_statement        go to state 50
    for_statement          go to state 51
    expression             go to state 52


state 44

   11 statement: block_statement .

    $default  reduce using rule 11 (statement)


state 45

    5 statement: declaration_statement .

    $default  reduce using rule 5 (statement)


state 46

   22 declaration_statement: type_specifier . T_IDENTIFIER T_SEMICOLON
   23                      | type_specifier . T_IDENTIFIER T_ASSIGN expression T_SEMICOLON

    T_IDENTIFIER  shift, and go to state 76


state 47

    6 statement: assignment_statement .

    $default  reduce using rule 6 (statement)


state 48

    7 statement: expression_statement .

    $default  reduce using rule 7 (statement)


state 49

    8 statement: if_statement .

    $default  reduce using rule 8 (statement)


state 50

    9 statement: while_statement .

    $default  reduce using rule 9 (statement)


state 51

   10 statement: for_statement .

    $default  reduce using rule 10 (statement)


state 52

   42 expression_statement: expression . T_SEMICOLON
   55 expression: expression . T_PLUS expression
   56           | expression . T_MINUS expression
   57           | expression . T_MULTIPLY expression
   58           | expression . T_DIVIDE expression
   59           | expression . T_MODULO expression
   60           | expression . T_EQ expression
   61           | expression . T_NEQ expression
   62           | expression . T_LT expression
   63           | expression . T_GT expression
   64           | expression . T_LTE expression
   65           | expression . T_GTE expression
   66           | expression . T_AND expression
   67           | expression . T_OR expression

    T_PLUS       shift, and go to state 77
    T_MINUS      shift, and go to state 78
    T_MULTIPLY   shift, and go to state 79
    T_DIVIDE     shift, and go to state 80
    T_MODULO     shift, and go to state 81
    T_EQ         shift, and go to state 82
    T_NEQ        shift, and go to state 83
    T_LT         shift, and go to state 84
    T_GT         shift, and go to state 85
    T_LTE        shift, and go to state 86
    T_GTE        shift, and go to state 87
    T_AND        shift, and go to state 88
    T_OR         shift, and go to state 89
    T_SEMICOLON  shift, and go to state 90


state 53

   43 if_statement: T_IF T_LPAREN . expression T_RPAREN statement
   44             | T_IF T_LPAREN . expression T_RPAREN statement T_ELSE statement

    T_IDENTIFIER      shift, and go to state 56
    T_INT_LITERAL     shift, and go to state 29
    T_FLOAT_LITERAL   shift, and go to state 30
    T_STRING_LITERAL  shift, and go to state 31
    T_BOOL_LITERAL    shift, and go to state 32
    T_CHAR_LITERAL    shift, and go to state 33
    T_MINUS           shift, and go to state 34
    T_NOT             shift, and go to state 35
    T_LPAREN          shift, and go to state 36
    T_MAHI_READ       shift, and go to state 38
    T_MAHI_WRITE      shift, and go to state 39
    T_MAHI_SORT       shift, and go to state 40
    T_MAHI_PUSH       shift, and go to state 41

    expression  go to state 91


state 54

   46 for_statement: T_FOR T_LPAREN . declaration_statement expression T_SEMICOLON expression T_RPAREN statement
   47              | T_FOR T_LPAREN . assignment_statement expression T_SEMICOLON expression T_RPAREN statement

    T_INT          shift, and go to state 10
    T_FLOAT        shift, and go to state 11
    T_BOOL         shift, and go to state 12
    T_CHAR         shift, and go to state 13
    T_STRING       shift, and go to state 14
    T_VOID         shift, and go to state 15
    T_GRAPH        shift, and go to state 16
    T_TREE         shift, and go to state 17
    T_RANGE_TREE   shift, and go to state 18
    T_DSU          shift, and go to state 19
    T_MATRIX       shift, and go to state 20
    T_ORDERED_SET  shift, and go to state 21
    T_IDENTIFIER   shift, and go to state 92

    declaration_statement  go to state 93
    type_specifier         go to state 46
    assignment_statement   go to state 94


state 55

   45 while_statement: T_WHILE T_LPAREN . expression T_RPAREN statement

    T_IDENTIFIER      shift, and go to state 56
    T_INT_LITERAL     shift, and go to state 29
    T_FLOAT_LITERAL   shift, and go to state 30
    T_STRING_LITERAL  shift, and go to state 31
    T_BOOL_LITERAL    shift, and go to state 32
    T_CHAR_LITERAL    shift, and go to state 33
    T_MINUS           shift, and go to state 34
    T_NOT             shift, and go to state 35
    T_LPAREN          shift, and go to state 36
    T_MAHI_READ       shift, and go to state 38
    T_MAHI_WRITE      shift, and go to state 39
    T_MAHI_SORT       shift, and go to state 40
    T_MAHI_PUSH       shift, and go to state 41

    expression  go to state 95


state 56

   53 expression: T_IDENTIFIER . T_LPAREN opt_argument_list T_RPAREN
   54           | T_IDENTIFIER .

    T_LPAREN  shift, and go to state 66

    $default  reduce using rule 54 (expression)


state 57

   14 statement: T_RETURN expression . T_SEMICOLON
   55 expression: expression . T_PLUS expression
   56           | expression . T_MINUS expression
   57           | expression . T_MULTIPLY expression
   58           | expression . T_DIVIDE expression
   59           | expression . T_MODULO expression
   60           | expression . T_EQ expression
   61           | expression . T_NEQ expression
   62           | expression . T_LT expression
   63           | expression . T_GT expression
   64           | expression . T_LTE expression
   65           | expression . T_GTE expression
   66           | expression . T_AND expression
   67           | expression . T_OR expression

    T_PLUS       shift, and go to state 77
    T_MINUS      shift, and go to state 78
    T_MULTIPLY   shift, and go to state 79
    T_DIVIDE     shift, and go to state 80
    T_MODULO     shift, and go to state 81
    T_EQ         shift, and go to state 82
    T_NEQ        shift, and go to state 83
    T_LT         shift, and go to state 84
    T_GT         shift, and go to state 85
    T_LTE        shift, and go to state 86
    T_GTE        shift, and go to state 87
    T_AND        shift, and go to state 88
    T_OR         shift, and go to state 89
    T_SEMICOLON  shift, and go to state 96


state 58

   12 statement: T_BREAK T_SEMICOLON .

    $default  reduce using rule 12 (statement)


state 59

   13 statement: T_CONTINUE T_SEMICOLON .

    $default  reduce using rule 13 (statement)


state 60

   36 assignment_statement: T_IDENTIFIER T_ASSIGN . expression T_SEMICOLON

    T_IDENTIFIER      shift, and go to state 56
    T_INT_LITERAL     shift, and go to state 29
    T_FLOAT_LITERAL   shift, and go to state 30
    T_STRING_LITERAL  shift, and go to state 31
    T_BOOL_LITERAL    shift, and go to state 32
    T_CHAR_LITERAL    shift, and go to state 33
    T_MINUS           shift, and go to state 34
    T_NOT             shift, and go to state 35
    T_LPAREN          shift, and go to state 36
    T_MAHI_READ       shift, and go to state 38
    T_MAHI_WRITE      shift, and go to state 39
    T_MAHI_SORT       shift, and go to state 40
    T_MAHI_PUSH       shift, and go to state 41

    expression  go to state 97


state 61

   37 assignment_statement: T_IDENTIFIER T_PLUS_ASSIGN . expression T_SEMICOLON

    T_IDENTIFIER      shift, and go to state 56
    T_INT_LITERAL     shift, and go to state 29
    T_FLOAT_LITERAL   shift, and go to state 30
    T_STRING_LITERAL  shift, and go to state 31
    T_BOOL_LITERAL    shift, and go to state 32
    T_CHAR_LITERAL    shift, and go to state 33
    T_MINUS           shift, and go to state 34
    T_NOT             shift, and go to state 35
    T_LPAREN          shift, and go to state 36
    T_MAHI_READ       shift, and go to state 38
    T_MAHI_WRITE      shift, and go to state 39
    T_MAHI_SORT       shift, and go to state 40
    T_MAHI_PUSH       shift, and go to state 41

    expression  go to state 98


state 62

   38 assignment_statement: T_IDENTIFIER T_MINUS_ASSIGN . expression T_SEMICOLON

    T_IDENTIFIER      shift, and go to state 56
    T_INT_LITERAL     shift, and go to state 29
    T_FLOAT_LITERAL   shift, and go to state 30
    T_STRING_LITERAL  shift, and go to state 31
    T_BOOL_LITERAL    shift, and go to state 32
    T_CHAR_LITERAL    shift, and go to state 33
    T_MINUS           shift, and go to state 34
    T_NOT             shift, and go to state 35
    T_LPAREN          shift, and go to state 36
    T_MAHI_READ       shift, and go to state 38
    T_MAHI_WRITE      shift, and go to state 39
    T_MAHI_SORT       shift, and go to state 40
    T_MAHI_PUSH       shift, and go to state 41

    expression  go to state 99


state 63

   39 assignment_statement: T_IDENTIFIER T_STAR_ASSIGN . expression T_SEMICOLON

    T_IDENTIFIER      shift, and go to state 56
    T_INT_LITERAL     shift, and go to state 29
    T_FLOAT_LITERAL   shift, and go to state 30
    T_STRING_LITERAL  shift, and go to state 31
    T_BOOL_LITERAL    shift, and go to state 32
    T_CHAR_LITERAL    shift, and go to state 33
    T_MINUS           shift, and go to state 34
    T_NOT             shift, and go to state 35
    T_LPAREN          shift, and go to state 36
    T_MAHI_READ       shift, and go to state 38
    T_MAHI_WRITE      shift, and go to state 39
    T_MAHI_SORT       shift, and go to state 40
    T_MAHI_PUSH       shift, and go to state 41

    expression  go to state 100


state 64

   40 assignment_statement: T_IDENTIFIER T_SLASH_ASSIGN . expression T_SEMICOLON

    T_IDENTIFIER      shift, and go to state 56
    T_INT_LITERAL     shift, and go to state 29
    T_FLOAT_LITERAL   shift, and go to state 30
    T_STRING_LITERAL  shift, and go to state 31
    T_BOOL_LITERAL    shift, and go to state 32
    T_CHAR_LITERAL    shift, and go to state 33
    T_MINUS           shift, and go to state 34
    T_NOT             shift, and go to state 35
    T_LPAREN          shift, and go to state 36
    T_MAHI_READ       shift, and go to state 38
    T_MAHI_WRITE      shift, and go to state 39
    T_MAHI_SORT       shift, and go to state 40
    T_MAHI_PUSH       shift, and go to state 41

    expression  go to state 101


state 65

   41 assignment_statement: T_IDENTIFIER T_PERCENT_ASSIGN . expression T_SEMICOLON

    T_IDENTIFIER      shift, and go to state 56
    T_INT_LITERAL     shift, and go to state 29
    T_FLOAT_LITERAL   shift, and go to state 30
    T_STRING_LITERAL  shift, and go to state 31
    T_BOOL_LITERAL    shift, and go to state 32
    T_CHAR_LITERAL    shift, and go to state 33
    T_MINUS           shift, and go to state 34
    T_NOT             shift, and go to state 35
    T_LPAREN          shift, and go to state 36
    T_MAHI_READ       shift, and go to state 38
    T_MAHI_WRITE      shift, and go to state 39
    T_MAHI_SORT       shift, and go to state 40
    T_MAHI_PUSH       shift, and go to state 41

    expression  go to state 102


state 66

   53 expression: T_IDENTIFIER T_LPAREN . opt_argument_list T_RPAREN

    T_IDENTIFIER      shift, and go to state 56
    T_INT_LITERAL     shift, and go to state 29
    T_FLOAT_LITERAL   shift, and go to state 30
    T_STRING_LITERAL  shift, and go to state 31
    T_BOOL_LITERAL    shift, and go to state 32
    T_CHAR_LITERAL    shift, and go to state 33
    T_MINUS           shift, and go to state 34
    T_NOT             shift, and go to state 35
    T_LPAREN          shift, and go to state 36
    T_MAHI_READ       shift, and go to state 38
    T_MAHI_WRITE      shift, and go to state 39
    T_MAHI_SORT       shift, and go to state 40
    T_MAHI_PUSH       shift, and go to state 41

    $default  reduce using rule 18 (opt_argument_list)

    argument_list      go to state 103
    opt_argument_list  go to state 104
    expression         go to state 105


state 67

   55 expression: expression . T_PLUS expression
   56           | expression . T_MINUS expression
   57           | expression . T_MULTIPLY expression
   58           | expression . T_DIVIDE expression
   59           | expression . T_MODULO expression
   60           | expression . T_EQ expression
   61           | expression . T_NEQ expression
   62           | expression . T_LT expression
   63           | expression . T_GT expression
   64           | expression . T_LTE expression
   65           | expression . T_GTE expression
   66           | expression . T_AND expression
   67           | expression . T_OR expression
   69           | T_MINUS expression .

    T_PLUS      shift, and go to state 77
    T_MINUS     shift, and go to state 78
    T_MULTIPLY  shift, and go to state 79
    T_DIVIDE    shift, and go to state 80
    T_MODULO    shift, and go to state 81
    T_EQ        shift, and go to state 82
    T_NEQ       shift, and go to state 83
    T_LT        shift, and go to state 84
    T_GT        shift, and go to state 85
    T_LTE       shift, and go to state 86
    T_GTE       shift, and go to state 87
    T_AND       shift, and go to state 88
    T_OR        shift, and go to state 89

    $default  reduce using rule 69 (expression)


state 68

   55 expression: expression . T_PLUS expression
   56           | expression . T_MINUS expression
   57           | expression . T_MULTIPLY expression
   58           | expression . T_DIVIDE expression
   59           | expression . T_MODULO expression
   60           | expression . T_EQ expression
   61           | expression . T_NEQ expression
   62           | expression . T_LT expression
   63           | expression . T_GT expression
   64           | expression . T_LTE expression
   65           | expression . T_GTE expression
   66           | expression . T_AND expression
   67           | expression . T_OR expression
   68           | T_NOT expression .

    T_PLUS      shift, and go to state 77
    T_MINUS     shift, and go to state 78
    T_MULTIPLY  shift, and go to state 79
    T_DIVIDE    shift, and go to state 80
    T_MODULO    shift, and go to state 81
    T_EQ        shift, and go to state 82
    T_NEQ       shift, and go to state 83
    T_LT        shift, and go to state 84
    T_GT        shift, and go to state 85
    T_LTE       shift, and go to state 86
    T_GTE       shift, and go to state 87
    T_AND       shift, and go to state 88
    T_OR        shift, and go to state 89

    $default  reduce using rule 68 (expression)


state 69

   55 expression: expression . T_PLUS expression
   56           | expression . T_MINUS expression
   57           | expression . T_MULTIPLY expression
   58           | expression . T_DIVIDE expression
   59           | expression . T_MODULO expression
   60           | expression . T_EQ expression
   61           | expression . T_NEQ expression
   62           | expression . T_LT expression
   63           | expression . T_GT expression
   64           | expression . T_LTE expression
   65           | expression . T_GTE expression
   66           | expression . T_AND expression
   67           | expression . T_OR expression
   70           | T_LPAREN expression . T_RPAREN

    T_PLUS      shift, and go to state 77
    T_MINUS     shift, and go to state 78
    T_MULTIPLY  shift, and go to state 79
    T_DIVIDE    shift, and go to state 80
    T_MODULO    shift, and go to state 81
